Fixed sorting being backwards, and cards overlapping in standings.

--- a/secret/haggle.css
+++ b/secret/haggle.css
@@ -57,4 +57,5 @@ body {
   display: grid;
   grid-template-columns: 6% 18% 39% 9% 9% 9%;
   grid-template-rows: auto;
+  height: 4rem;
 }
